Used opencode to fix my issues with post truncation
First time using it in this way, wonder if it'll blow up.

--- a/_sass/minima/_feed.scss
+++ b/_sass/minima/_feed.scss
@@ -1,5 +1,33 @@
 //This is the styling for a featured post.
 
+.feed-card {
+    .card-content,
+    .card-excerpt {
+        min-width: 0;
+    }
+
+    .card-excerpt {
+        overflow: hidden;
+        overflow-wrap: anywhere;
+    }
+
+    .card-excerpt p {
+        display: -webkit-box;
+        -webkit-line-clamp: 3;
+        -webkit-box-orient: vertical;
+        overflow: hidden;
+        margin-bottom: 0;
+    }
+
+    .card-excerpt img,
+    .card-excerpt picture,
+    .card-excerpt figure,
+    .card-excerpt iframe,
+    .card-excerpt video {
+        display: none;
+    }
+}
+
 .featured-post .feed-card {
     display: grid;
     grid-template-columns: 1fr;
@@ -58,6 +86,16 @@
         color: white;
     }
 
+    .card-excerpt {
+        font-style: italic;
+        color: white;
+
+        a {
+            color: white;
+            text-decoration: underline;
+        }
+    }
+
     .date{
         color: darkgray;
         font-size: 8pt;
@@ -68,7 +106,7 @@
 .feed .feed-card {
     display: grid;
     grid-template-columns: 110px 1fr;
-    grid-template-rows: 110px;
+    grid-template-rows: auto;
     column-gap: 10px;
     margin-top: 10px;
     border-top: lightgray;
@@ -103,7 +141,7 @@
 
     .featured-image {
         width:100%;
-        height:100%;
+        height:110px;
         object-fit: cover;
         
     }
@@ -122,8 +160,21 @@
         font-style: italic;
     }
 
+    .card-excerpt {
+        font-style: italic;
+    }
+
     .date{
         color: darkgray;
         font-size: 8pt;
+    }
+
+    @include media-query($on-palm) {
+        grid-template-columns: 1fr;
+        row-gap: 10px;
+
+        .featured-image {
+            height: 160px;
+        }
     }
 }
